# warp-byok-proxy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: TODO-phase0-finish.md  upstream-warp-audit-2026-05.md  warp-client-behavior-audit-stub.md  zero-egress-verification.md
scripts/: enable-redirect.sh  teardown.sh  verify_zero_egress.sh
src/: auth.rs  bedrock_client.rs  betas.rs  cache.rs  cert.rs  cli.rs  config.rs  frame.rs  lib.rs  logging.rs  main.rs  model_id.rs  route_multi_agent.rs  sdk_translator.rs  server.rs  stream_accumulator.rs  thinking.rs  translator.rs  ui_adapter.rs
tests/: auth_tests.rs  betas_tests.rs  cache_tests.rs  cert_tests.rs  cli_smoke.rs  config_tests.rs  e2e_midstream_error.rs  e2e_proxy_happy_path.rs  model_id_tests.rs  proto_dep_compiles.rs  sdk_translator_tests.rs  server_boot_test.rs  server_stub_tests.rs  smoke_real_bedrock.rs  stream_accumulator_tests.rs  thinking_tests.rs  translator_tests.rs  ui_adapter_tests.rs
